removed minifier potree

--- a/_config.yml
+++ b/_config.yml
@@ -275,7 +275,7 @@ sass:
 # -----------------------------------------------------------------------------
 
 jekyll-minifier:
-  exclude: ["robots.txt", "assets/js/search/*.js"]
+  exclude: ["robots.txt", "assets/js/search/*.js", "assets/potree/*"]
   uglifier_args:
     harmony: true
 
